[gd_scene load_steps=4 format=3 uid="uid://dh71g61cm8k44"]

[ext_resource type="Theme" uid="uid://da4noqsij73it" path="res://gui/theme.tres" id="1"]
[ext_resource type="Script" uid="uid://h31k4xtmhjt" path="res://gui/pause_menu.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://bsyqg6eh3wl5i" path="res://gui/coins_counter.tscn" id="4"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")
script = ExtResource("2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.294118)

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Game Paused"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Resume"

[node name="QuitButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Quit"

[node name="CoinsCounter" parent="ColorRect" instance=ExtResource("4")]
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 105.0
offset_bottom = 50.0

[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
